uber clone react native app for testing(just a test)

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "uber-clone-reactnative",
-    "slug": "uber-clone-reactnative",
+    "name": "katkot travel",
+    "slug": "katkot travel",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
